fix: home page news font size

--- a/src/app/modules/common/components/news/news.component.html
+++ b/src/app/modules/common/components/news/news.component.html
@@ -11,7 +11,7 @@
           <p>{{news.date}}</p>
           <hr class="component-news__divider-colored border-0 my-0_5 opacity-100">
         </div>
-        <h6 class="text-black-2 me-2 me-sm-14 component-news__content-title">{{news.title}}</h6>
+        <h5 class="text-black-2 me-2 me-sm-14 font-sm font-sm-md component-news__content-title">{{news.title}}</h5>
       </div>
 
       <app-arrow-forward-icon
