--- a/src/app/modules/production/components/blocks/afterImage-img-block/afterImage-img-block.component.scss
+++ b/src/app/modules/production/components/blocks/afterImage-img-block/afterImage-img-block.component.scss
@@ -1,19 +1,122 @@
 
 @import "mixins";
+@import "colors";
 :host {
-  --pc-img: '',
-  --pad-img: '',
-  --mobile-img: '',
+  display: flex;
+  align-items: center;
 }
 
-// .img {
-//   background-image: url(var(--pc-img));
-//   @include generateStyleByMaxBreakpoint("md") {
-//     background-image: url(var(--pad-img));
-//   }
-//   @include generateStyleByMaxBreakpoint("sm") {
-//     background-image: url(var(--mobile-img));
-//   }
-// }
+.img {
+  &.img-afterImage {
+    filter:blur(5px)
+  }
+  &__1 {
+    width: 200px;
+    height: 500px;
+    margin-bottom: 20px;
+    border-radius: 0 28px 28px 0;
+    & .img {
+      width: 100%;
+      height: 100%;
+      background-position: -487px 0 !important;
+    }
+  }
+}
+
+.main {
+  width: 100vw;
+  .img {
+    &__2 {
+      width: calc(50vw - 200px);
+      height: 400px;
+      border-radius: 0 28px 28px 0;
+      & .img {
+        width: 100%;
+        height: 100%;
+        background-position: left !important;
+      }
+    }
+    &__3 {
+      width: 470px;
+      height: 500px;
+      border-radius: 28px 0 0 28px;
+      background-position: center !important;
+      @include generateStyleByMaxBreakpoint("md") {
+        width: 468px;
+        height: 400px;
+      }
+    }
+    &__4 {
+      width: calc(50vw - 200px);
+      height: 400px;
+      border-radius: 28px 0 0 28px;
+      & .img {
+        width: 100%;
+        height: 100%;
+        background-position: right !important;
+      }
+    }
+    &__5 {
+      width: 332px;
+      height: 300px;
+      border-radius: 28px;
+      background-position: center !important;
+    }
+  }
+  &--mobile {
+    flex-direction: column;
+    & .main__content {
+      background-color: map-get($black-light, 9 );
+      margin: 0 20px;
+      padding-bottom: 20px;
+      border-radius: 20px;
+    }
+    .img {
+      &__5 {
+        margin-top: unset !important;
+        border-radius: 28px;
+        box-shadow: 5px 5px 15px 0px rgba(0, 0, 0, 0.08);
+      }
+    }
+    h2 {
+      font-size: 1.5rem !important;
+      line-height: 2.25rem;
+      text-align: center;
+    }
+    h3 {
+      font-size: 1.125rem !important;
+      line-height: 1.625rem;
+      text-align: center;
+    }
+    p, li {
+      font-size: 0.875rem !important;
+      line-height: 1.375rem;
+    }
+    ul {
+    margin: 0 20px;
+    }
+  }
+  &--tablet {
+    flex-direction: column;
+    .img {
+      &__3 {
+        margin-top: unset !important;
+        margin: 0 20px;
+        border-radius: 28px;
+      }
+    }
+    h2, h3, p {
+      text-align: center;
+    }
+    ul {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+  }
+  &--desktop {
+    flex-direction: row;
+  }
+}
 
 
