--- a/src/app/modules/production/components/tab-pages/calling-tab/calling-tab.component.scss
+++ b/src/app/modules/production/components/tab-pages/calling-tab/calling-tab.component.scss
@@ -2,10 +2,56 @@
 
 .block {
   &__1 {
-
+    @include generateStyleByMaxBreakpoint("md") {
+      flex-direction: column;
+      li {
+        width: 100% !important;
+      }
+      h1 {
+        font-size: 2.25rem !important;
+        line-height: 2.75rem;
+        text-align: center;
+      }
+      h3 {
+        font-size: 1.125rem !important;
+        line-height: 1.625rem;
+      }
+    }
+    @include generateStyleByMaxBreakpoint("sm") {
+      flex-direction: column;
+      & > li {
+        padding: 20px 40px !important;
+      }
+      h1 {
+        font-size: 1.5rem !important;
+        line-height: 2.25rem;
+        text-align: center;
+      }
+      h3 {
+        font-size: 0.875rem !important;
+        line-height: 1.375rem;
+      }
+    }
   }
   &__2 {
-    height: 1000px;
+    height: 2025px;
+    ul {
+      top: 93px;
+    }
+    @include generateStyleByMaxBreakpoint("md") {
+      height: 2410px;
+      ul {
+        top: 35px;
+      }
+    }
+    @include generateStyleByMaxBreakpoint("sm") {
+      height: 2095px;
+      margin-top: 0;
+      ul {
+        top: 0;
+      }
+    }
+
   }
 }
 
