--- a/src/app/modules/production/components/blocks/afterImage-img-block/afterImage-img-block.component.scss
+++ b/src/app/modules/production/components/blocks/afterImage-img-block/afterImage-img-block.component.scss
@@ -24,10 +24,9 @@
 }
 
 .main {
-  width: 100vw;
   .img {
     &__2 {
-      width: calc(50vw - 200px);
+      width: calc(50vw - 254px);
       height: 400px;
       border-radius: 0 28px 28px 0;
       & .img {
@@ -47,7 +46,7 @@
       }
     }
     &__4 {
-      width: calc(50vw - 200px);
+      width: calc(50vw - 254px);
       height: 400px;
       border-radius: 28px 0 0 28px;
       & .img {
@@ -64,12 +63,14 @@
     }
   }
   &--mobile {
+    width: 100%;
     flex-direction: column;
     & .main__content {
+      width: calc(100% - 40px);
       background-color: map-get($black-light, 9 );
       margin: 0 20px;
       padding-bottom: 20px;
-      border-radius: 20px;
+      border-radius: 30px 30px 20px 20px;
     }
     .img {
       &__5 {
@@ -84,6 +85,7 @@
       text-align: center;
     }
     h3 {
+      padding: 0 20px;
       font-size: 1.125rem !important;
       line-height: 1.625rem;
       text-align: center;
