--- a/src/app/modules/production/components/blocks/after-img-word-block/after-img-word-block.component.html
+++ b/src/app/modules/production/components/blocks/after-img-word-block/after-img-word-block.component.html
@@ -6,7 +6,7 @@
 </div>
 <div class="main d-flex main--{{ this.device }}">
   <div class="d-flex justify-content-center align-items-center mb-5 w-100">
-    <div class="d-flex flex-column main__content-block align-items-center mt-10">
+    <div class="d-flex flex-column main__content-block align-items-center align-items-lg-start mt-10 ">
       <h2 class="mb-2_5 text-break d-none d-md-block">
         {{ this.data?.title }}
       </h2>
