--- a/src/app/modules/production/components/tab-pages/care-tab/care-tab.component.html
+++ b/src/app/modules/production/components/tab-pages/care-tab/care-tab.component.html
@@ -1,7 +1,7 @@
 <section class="mb-10 mb-md-20">
   <app-cover-block
     class=""
-    [imgUrl]="'assets/product_pc/banner_news_caring_pc.png'"
+    [imgUrl]="this.coverImg"
     title="照護服務"
     [contentInnerHtml]="
       '串聯關懷，完整服務：整合性方案，實現全方位無縫照護體驗。從照顧到管理，讓關懷更深入更全面'
