after-img-word-block: correct width of main__content.

--- a/src/app/modules/production/components/blocks/after-img-word-block/after-img-word-block.component.scss
+++ b/src/app/modules/production/components/blocks/after-img-word-block/after-img-word-block.component.scss
@@ -108,6 +108,7 @@
     flex-direction: column;
 
     & .main__content {
+      width: 332px;
       background-color: map-get($black-light, 9);
       margin: 0 20px;
       padding-bottom: 20px;
