--- a/src/app/modules/production/components/blocks/afterImage-img-block/afterImage-img-block.component.scss
+++ b/src/app/modules/production/components/blocks/afterImage-img-block/afterImage-img-block.component.scss
@@ -4,6 +4,7 @@
 :host {
   display: flex;
   align-items: center;
+  width: 100vw;
 }
 
 .img {
@@ -11,7 +12,7 @@
     filter:blur(5px)
   }
   &__1 {
-    width: 200px;
+    min-width: 200px;
     height: 500px;
     margin-bottom: 20px;
     border-radius: 0 28px 28px 0;
@@ -24,8 +25,10 @@
 }
 
 .main {
+  width: 100vw;
   .img {
     &__2 {
+      display: none;
       width: calc(50vw - 254px);
       height: 400px;
       border-radius: 0 28px 28px 0;
@@ -36,16 +39,13 @@
       }
     }
     &__3 {
-      width: 470px;
+      width: 595px;
       height: 500px;
       border-radius: 28px 0 0 28px;
       background-position: center !important;
-      @include generateStyleByMaxBreakpoint("md") {
-        width: 468px;
-        height: 400px;
-      }
     }
     &__4 {
+      display: none;
       width: calc(50vw - 254px);
       height: 400px;
       border-radius: 28px 0 0 28px;
@@ -61,8 +61,42 @@
       border-radius: 28px;
       background-position: center !important;
     }
+
   }
-  &--mobile {
+  @include generateStyleByMaxBreakpoint("lg") {
+    flex-direction: row;
+  }
+
+  @include generateStyleByMaxBreakpoint("md") {
+    flex-direction: column;
+    .img {
+      &__1 {
+        display: none;
+      }
+      &__2 {
+        display: flex;
+      }
+      &__3 {
+        width: 468px;
+        height: 400px;
+        margin-top: unset !important;
+        margin: 0 20px;
+        border-radius: 28px;
+      }
+      &__4 {
+        display: flex;
+      }
+    }
+    h2, h3, p {
+      text-align: center;
+    }
+    ul {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+  };
+  @include generateStyleByMaxBreakpoint("sm") {
     width: 100%;
     flex-direction: column;
     & .main__content {
@@ -97,28 +131,7 @@
     ul {
     margin: 0 20px;
     }
-  }
-  &--tablet {
-    flex-direction: column;
-    .img {
-      &__3 {
-        margin-top: unset !important;
-        margin: 0 20px;
-        border-radius: 28px;
-      }
-    }
-    h2, h3, p {
-      text-align: center;
-    }
-    ul {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-  }
-  &--desktop {
-    flex-direction: row;
-  }
+  };
 }
 
 
