tab-pages: remove <br> form cover block title

--- a/src/app/modules/production/components/tab-pages/calling-tab/calling-tab.component.html
+++ b/src/app/modules/production/components/tab-pages/calling-tab/calling-tab.component.html
@@ -1,7 +1,7 @@
 <app-cover-block class="block-bottom-gap"
 [imgUrl]="'assets/product_pc/banner_news_queue_pc.png'"
 title="叫號系統"
-[contentInnerHtml]="'智慧排隊，報到自動化，降低等待時間，同時保障病患隱私，<br>為每位用戶提供更便捷的服務體驗'">
+[contentInnerHtml]="'智慧排隊，報到自動化，降低等待時間，同時保障病患隱私，為每位用戶提供更便捷的服務體驗'">
 </app-cover-block>
 
 <ul class="block__1 d-flex block-bottom-gap">
