--- a/src/app/modules/common/pages/about-us-page/about-us-page.component.html
+++ b/src/app/modules/common/pages/about-us-page/about-us-page.component.html
@@ -1,1 +1,130 @@
-<p>about-us-page works!</p>
+<section>
+  <section
+    #banner
+    class="row main-title d-flex flex-column-reverse flex-md-row"
+  >
+    <app-banner-block
+      [imgUrl]="this.coverImg"
+      title="關於SYNTRON"
+      [contentInnerHtml]="
+        '以提供客戶驚豔且創新的產品技術為出發點，不斷開創同業之先例，而經營面則持續投注新穎、國際化的概念'
+      "
+    >
+    </app-banner-block>
+  </section>
+
+  <section class="d-flex flex-column flex-lg-row py-18 position-relative">
+    <aside
+      #leftSide
+      class="d-none d-lg-block flex-md-column about-us__left-side ps-10 ps-lg-30"
+    >
+      <app-tab-list
+        [tabs]="tabs"
+        [focusTab]="focusTab"
+        (changeTab)="changeTab($event)"
+      ></app-tab-list>
+    </aside>
+    <section
+      #rightSide
+      class="w-100 d-flex flex-column gap-15 pe-10 pe-lg-30 about-us__right-side"
+    >
+      <div #company class="about-us__company">
+        <div class="d-md-flex d-none gap-5 d-flex flex-column">
+          <h2>SYNTRON企業願景</h2>
+          <h3 class="fw-normal">SYNTRON’S CORPORATE VISION</h3>
+          <h4 class="fw-normal">
+            <span class="text-primary-2">伈創資訊 SYNTRON</span>
+            是一家專注於智慧應用產品開發及服務提供的新創公司，期許提供穩定創新的自有開發產品，滿足客戶的需求，提供符合客戶長遠的資訊發展規劃，與客戶共創雙贏局面。
+          </h4>
+          <h4 class="fw-normal">
+            我們以
+            <span class="text-primary-2">醫療單位、照護機構、政府機構</span>
+            為主要市場，逐步建立北、中、南及中國等區域之客戶群及完善的服務網絡，為客戶提供優質且專業的解決方案，並以誠信、務實態度贏得客戶信任，以達成客戶交付任務、滿足客戶需求、提升客戶滿意度。
+          </h4>
+          <h4 class="fw-normal">
+            本公司目前在台灣、中國都有相關業務進行，近年更預計將業務擴大到周邊國家。
+          </h4>
+        </div>
+
+        <div class="d-block d-md-none gap-5 d-flex flex-column">
+          <h3>SYNTRON企業願景</h3>
+          <h4 class="fw-normal">SYNTRON’S CORPORATE VISION</h4>
+          <h6 class="fw-normal">
+            <span class="text-primary-2">伈創資訊 SYNTRON</span>
+            是一家專注於智慧應用產品開發及服務提供的新創公司，期許提供穩定創新的自有開發產品，滿足客戶的需求，提供符合客戶長遠的資訊發展規劃，與客戶共創雙贏局面。
+          </h6>
+          <h6 class="fw-normal">
+            我們以
+            <span class="text-primary-2">醫療單位、照護機構、政府機構</span>
+            為主要市場，逐步建立北、中、南及中國等區域之客戶群及完善的服務網絡，為客戶提供優質且專業的解決方案，並以誠信、務實態度贏得客戶信任，以達成客戶交付任務、滿足客戶需求、提升客戶滿意度。
+          </h6>
+          <h6 class="fw-normal">
+            本公司目前在台灣、中國都有相關業務進行，近年更預計將業務擴大到周邊國家。
+          </h6>
+        </div>
+      </div>
+      <div
+        #solution
+        class="gap-5 d-flex flex-column position-relative about-us__solution"
+      >
+        <div class="d-md-flex d-none gap-5 d-flex flex-column">
+          <h2>解決方案</h2>
+          <h3 class="fw-normal">SOLUTIONS</h3>
+        </div>
+        <div class="d-block d-md-none gap-5 d-flex flex-column">
+          <h3>解決方案</h3>
+          <h4 class="fw-normal">SOLUTIONS</h4>
+        </div>
+        <div
+          class="d-flex about-us__solution__block flex-column flex-md-row gap-md-0 gap-5"
+        >
+          <div
+            *ngFor="let solution of solution_slide"
+            class="about-us__solution__img"
+            [style.backgroundImage]="'url(' + solution.img.pc + ')'"
+          >
+            <div
+              class="text-white about-us__solution__content py-md-10 px-5 py-5 d-flex flex-column justify-content-end align-items-start"
+            >
+              <div class="d-md-flex d-none d-md-flex d-none">
+                <h3>{{ solution.title }}</h3>
+              </div>
+              <div class="d-block d-md-none d-block d-md-none">
+                <h5>{{ solution.title }}</h5>
+              </div>
+              <h6 class="fw-normal">{{ solution.content }}</h6>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div #custom>
+        <div class="d-md-flex d-none gap-5 d-flex flex-column">
+          <h2>我們的客戶</h2>
+          <h3 class="fw-normal">OUR CUSTOMERS</h3>
+          <h4 class="fw-normal">
+            全球客戶信任我們的解決方案，我們以卓越的技術的專業知識，滿足客戶多樣的需求。
+            與我們合作，建立可靠的夥伴關係，讓信任成為您成功的基石。
+          </h4>
+        </div>
+        <div class="d-block d-md-none gap-5 d-flex flex-column">
+          <h3>我們的客戶</h3>
+          <h4 class="fw-normal">OUR CUSTOMERS</h4>
+          <h6 class="fw-normal">
+            全球客戶信任我們的解決方案，我們以卓越的技術的專業知識，滿足客戶多樣的需求。
+            與我們合作，建立可靠的夥伴關係，讓信任成為您成功的基石。
+          </h6>
+        </div>
+      </div>
+      <div class="d-flex gap-15 flex-wrap">
+        <div *ngFor="let img of logo_list">
+          <img
+            src="assets/basic/logo/{{ img }}.png"
+            alt="img"
+            class="about-us__logo"
+          />
+        </div>
+      </div>
+    </section>
+  </section>
+</section>
