fix: news date sort, news navigation, header main logo navigation

--- a/src/app/modules/shared/components/header/header.component.html
+++ b/src/app/modules/shared/components/header/header.component.html
@@ -4,7 +4,7 @@
   <div
     class="h-100 d-flex justify-content-between align-items-center w-100 component-header__container"
   >
-    <app-main-logo class="h-100"></app-main-logo>
+    <app-main-logo class="h-100 cursor-pointer" (click)="navigate('common/home')"></app-main-logo>
     <div class="d-flex">
       <ul class="h-100 align-items-center d-none d-md-flex">
         <li>
