--- a/src/app/modules/common/pages/home-page/home-page.component.html
+++ b/src/app/modules/common/pages/home-page/home-page.component.html
@@ -26,7 +26,7 @@
       <div class="d-flex flex-column justify-content-center news__title">
         <h2 class="px-3 text-nowrap">最新消息</h2>
         <h3 class="px-3">NEWS</h3>
-        <app-text-button class="news__view-all-button">
+        <app-text-button class="news__view-all-button" (click)="toNewsCenter()">
           瀏覽全部
           <app-arrow-forward-icon
             class="news__view-all-arrow-forward-icon ms-1_5"
