--- a/src/app/modules/shared/components/menu/menu.component.html
+++ b/src/app/modules/shared/components/menu/menu.component.html
@@ -1,10 +1,10 @@
 <div class="component-menu position-relative">
   <div
-    class="component-menu__container bg-white z-2 position-absolute top-0 start-0 d-flex flex-column align-items-center"
+    class="component-menu__container bg-white z-2 position-absolute top-0 start-0 d-flex flex-column align-items-center overflow-y-auto"
   >
     <app-header-spacing></app-header-spacing>
 
-    <div class="px-5 px-sm-10 w-100">
+    <div class="px-5 px-sm-10 w-100 pb-5 pb-sm-10">
       <ul class="mt-10 mt-sm-5 w-100">
         <li class="mb-2">
           <app-menu-main-button
