fix: adjust breakpoint from share breakpoint to 1220 and 755px

--- a/src/app/modules/common/pages/home-page/home-page.component.html
+++ b/src/app/modules/common/pages/home-page/home-page.component.html
@@ -74,19 +74,19 @@
       <div class="row product__cards">
         <app-product-card
           type="healthcare"
-          class="col-12 col-sm-6 col-md-3 mb-4 mb-md-0 d-flex justify-content-center"
+          class="mb-4 d-flex justify-content-center product__card"
         ></app-product-card>
         <app-product-card
           type="pill"
-          class="col-12 col-sm-6 col-md-3 mb-4 mb-md-0 d-flex justify-content-center"
+          class="mb-4 d-flex justify-content-center product__card"
         ></app-product-card>
         <app-product-card
           type="dns"
-          class="col-12 col-sm-6 col-md-3 mb-4 mb-md-0 d-flex justify-content-center"
+          class="mb-4 d-flex justify-content-center product__card"
         ></app-product-card>
         <app-product-card
           type="backup"
-          class="col-12 col-sm-6 col-md-3 mb-4 mb-md-0 d-flex justify-content-center"
+          class="mb-4 d-flex justify-content-center product__card"
         ></app-product-card>
       </div>
     </div>
