--- a/src/app/modules/production/components/tab-pages/care-tab/care-tab.component.scss
+++ b/src/app/modules/production/components/tab-pages/care-tab/care-tab.component.scss
@@ -18,10 +18,12 @@ ul.list-disc {
 
 .block {
   &__afterImg {
-    margin-top: -3.75rem;
-
     @include generateStyleByMaxBreakpoint("md") {
-      margin-top: 0;
+      margin-top: -3.75rem;
+    }
+
+    @include generateStyleByMaxBreakpoint("sm") {
+      margin-top: 0rem;
     }
   }
 
@@ -96,38 +98,22 @@ ul.list-disc {
   animation: fade-in-right 1s ease-in-out,
     twink 1s ease-in-out;
   max-width: 50rem;
-  width: 100%;
-  gap: 0.625rem;
-
-  @include generateStyleByMaxBreakpoint("lg") {
-    max-width: 43rem;
-  }
-
-  @include generateStyleByMaxBreakpoint("md") {
-    max-width: 20.75rem;
-  }
 
   &__block {
     margin-top: 1.25rem;
     padding-bottom: 2.5rem;
-
-    @include generateStyleByMaxBreakpoint("lg") {
-      padding-bottom: 20rem;
-    }
-
-    @include generateStyleByMaxBreakpoint("md") {
-      padding-bottom: 15rem;
-    }
+    border-radius: 30px 30px 0 0;
+    width: 100%;
 
     &__sub-block-1 {
+      position: relative;
       max-width: 28.75rem;
-      width: 100%;
 
-      @include generateStyleByMaxBreakpoint("lg") {
+      @include generateStyleByMaxBreakpoint("md") {
         max-width: 40.625rem;
       }
 
-      @include generateStyleByMaxBreakpoint("md") {
+      @include generateStyleByMaxBreakpoint("sm") {
         max-width: 25.75rem
       }
     }
@@ -135,161 +121,32 @@ ul.list-disc {
     &__sub-block-2 {
       position: relative;
       max-width: 34.5rem;
-      width: 100%;
-
-      @include generateStyleByMaxBreakpoint("lg") {
-        max-width: 37.5rem;
-      }
 
       @include generateStyleByMaxBreakpoint("md") {
-        max-width: 21.6875rem;
+        max-width: 40.625rem;
       }
     }
 
     &__question-block {
-      max-width: 13.75rem;
-      width: 50%;
-      height: 11.25rem;
-
-      border-radius: 1.25rem;
-      border: 1px solid map-get($primary-light, 2);
-      box-shadow: 5px 5px 15px 0px rgba(0, 0, 0, 0.08);
-      background-image: url('~src/assets/img/illustration/question_mark.svg');
+      background-position: center;
       background-repeat: no-repeat;
-      background-position: 95% 10%;
-
-      @include generateStyleByMaxBreakpoint("lg") {
-        max-width: 19.6875rem;
-        height: 11.25rem;
-      }
-
-      @include generateStyleByMaxBreakpoint("md") {
-        max-width: 10.125rem;
-        height: 8.75rem;
-      }
+      background-size: contain;
+      height: 0;
+      padding-top: calc(360%/460 * 100);
     }
 
     &__setting-block {
-      &__img-block {
-        margin-top: -7rem;
-      }
 
-      max-width: 10rem;
-      width: calc(100% / 3);
-      height: 11rem;
-      border: 1px solid map-get($primary-light, 3);
-      border-radius: 10% 10% 70% 70%;
-      box-shadow: 5px 5px 15px 0px map-get($primary-light, 2);
-
-      @include generateStyleByMaxBreakpoint("md") {
-        max-width: 6.8125rem;
-        height: 9.375rem;
-      }
-    }
-
-    &__line-circle {
-      max-width: 26.25rem;
-      height: 12.75rem;
-      width: 100%;
-      border: 1px solid map-get($primary-light, 3);
-      border-radius: 0 0 50% 50%/0 0 100% 100%;
-      border-top: none;
-      position: absolute;
-      top: 15.5rem;
-
-      @include generateStyleByMaxBreakpoint("lg") {
-        max-width: 28.875rem;
-        height: 15.3125rem;
-      }
-
-      @include generateStyleByMaxBreakpoint("md") {
-        max-width: 16.0625rem;
-        height: 9.1875rem;
-        top: 17rem;
-      }
-    }
-
-    &__circle-word {
-      width: 6.875rem;
-      height: 6.875rem;
-      border-radius: 50%;
-      box-shadow: 5px 5px 15px 0px rgba(0, 0, 0, 0.08);
-      position: absolute;
-
-      @include generateStyleByMaxBreakpoint("lg") {
-        width: 8.125rem;
-        height: 8.125rem;
-      }
-
-      @include generateStyleByMaxBreakpoint("md") {
-        width: 5.625rem;
-        height: 5.625rem;
-      }
-
-      &__circle-1 {
-        top: 20rem;
-        left: 3rem;
-
-        @include generateStyleByMaxBreakpoint("lg") {
-          top: 21.75rem;
-          left: 3rem;
-        }
-
-        @include generateStyleByMaxBreakpoint("md") {
-          top: 18rem;
-          left: 0.75rem;
-        }
-      }
-
-      &__circle-2 {
-        top: 24rem;
-        left: 9.865rem;
-
-        @include generateStyleByMaxBreakpoint("lg") {
-          top: 26.75rem;
-          left: 10rem;
-        }
-
-        @include generateStyleByMaxBreakpoint("md") {
-          top: 22rem;
-          left: 5rem;
-        }
-      }
-
-      &__circle-3 {
-        top: 24rem;
-        right: 9.865rem;
-
-        @include generateStyleByMaxBreakpoint("lg") {
-          top: 26.75rem;
-          right: 10rem;
-        }
-
-        @include generateStyleByMaxBreakpoint("md") {
-          top: 22rem;
-          right: 5rem;
-        }
-      }
-
-      &__circle-4 {
-        top: 20rem;
-        right: 3rem;
-
-        @include generateStyleByMaxBreakpoint("lg") {
-          top: 21.75rem;
-          right: 3rem;
-        }
-
-        @include generateStyleByMaxBreakpoint("md") {
-          top: 18rem;
-          right: 0.75rem;
-        }
-      }
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: contain;
+      height: 0;
+      padding-top: calc(422%/552 * 100);
     }
   }
 
   &__traning-people-block {
-    @include generateStyleByMaxBreakpoint("lg") {
+    @include generateStyleByMaxBreakpoint("md") {
       max-width: 48rem;
       width: 100%;
     }
@@ -303,9 +160,14 @@ ul.list-disc {
     border: 1px solid map-get($primary-light, 3);
     box-shadow: 5px 5px 15px 0px rgba(0, 0, 0, 0.08);
 
-    @include generateStyleByMaxBreakpoint("lg") {
+    @include generateStyleByMaxBreakpoint("md") {
       min-width: 20.875rem;
       height: 21rem;
+    }
+    @include generateStyleByMaxBreakpoint("sm") {
+      min-width: 0rem;
+      height: auto;
+      padding-bottom: 2.5rem;
     }
   }
 
@@ -327,9 +189,9 @@ ul.list-disc {
   height: 8.125rem;
   background-image: url('~src/assets/product_pc/image_consultation_pc.png');
   background-repeat: repeat;
-  background-size: contain;
+  background-size: cover;
 
-  @include generateStyleByMaxBreakpoint("lg") {
+  @include generateStyleByMaxBreakpoint("md") {
     background-image: url('~src/assets/product_pad/image_consultation_pad.png');
     height: 4.125rem;
   }
@@ -340,9 +202,9 @@ ul.list-disc {
   height: 8.125rem;
   background-image: url('~src/assets/product_pc/image_training_pc.png');
   background-repeat: repeat;
-  background-size: contain;
+  background-size: cover;
 
-  @include generateStyleByMaxBreakpoint("lg") {
+  @include generateStyleByMaxBreakpoint("md") {
     background-image: url('~src/assets/product_pad/image_training_pad.png');
     height: 4.125rem;
   }
@@ -359,6 +221,10 @@ ul.list-disc {
       &__path {
         fill: map-get($primary-light, 2)
       }
+    }
+
+    .component-arrow-drop-down-icon {
+      margin-top: -3rem;
     }
   }
 
