--- a/src/app/modules/production/components/tab-pages/care-tab/care-tab.component.html
+++ b/src/app/modules/production/components/tab-pages/care-tab/care-tab.component.html
@@ -13,7 +13,7 @@
   <div class="block__2 position-relative">
     <div
       #consultationWords
-      class="w-100 animation-bg-consultation_words d-md-block d-none"
+      class="w-100 animation-bg-consultation_words d-sm-block d-none"
     ></div>
     <div class="block__afterImg">
       <app-after-img-word-block
@@ -24,27 +24,30 @@
 </section>
 <section class="mb-10 mb-md-20">
   <div class="d-flex flex-column text-center align-items-center">
-    <div class="d-flex flex-column care-system mb-5">
-      <h2 class="d-md-block d-none d-none d-md-block">照護系統</h2>
-      <h3 class="text-secondary-1 d-none d-md-block">CARE SYSTEM</h3>
-      <h5 class="text-secondary-1 fw-normal mt-2 d-none d-md-block">
-        照護系統是一套以「人」為主軸的系統，期望隨著「人」的老化年齡及需求變化，在不同機構都可以了解被照護者的過去及現在狀況，評估未來可能發生風險，並可以讓後勤照護者及醫療團隊建立一套彼此溝通、紀錄照護／用藥的共通平台
-      </h5>
-
-      <h3 class="d-block d-md-none">照護系統</h3>
-      <h4 class="text-secondary-1 d-block d-md-none">CARE SYSTEM</h4>
-      <h6 class="text-secondary-1 fw-normal mt-2 d-block d-md-none">
-        照護系統是一套以「人」為主軸的系統，期望隨著「人」的老化年齡及需求變化，在不同機構都可以了解被照護者的過去及現在狀況，評估未來可能發生風險，並可以讓後勤照護者及醫療團隊建立一套彼此溝通、紀錄照護／用藥的共通平台
-      </h6>
+    <div class="care-system w-100 mb-5 px-10">
+      <div class="d-none d-sm-flex flex-column gap-5">
+        <h2>照護系統</h2>
+        <h3 class="text-secondary-1">CARE SYSTEM</h3>
+        <h5 class="text-secondary-1 fw-normal">
+          照護系統是一套以「人」為主軸的系統，期望隨著「人」的老化年齡及需求變化，在不同機構都可以了解被照護者的過去及現在狀況，評估未來可能發生風險，並可以讓後勤照護者及醫療團隊建立一套彼此溝通、紀錄照護／用藥的共通平台
+        </h5>
+      </div>
+      <div class="d-flex d-sm-none flex-column gap-2_5">
+        <h3>照護系統</h3>
+        <h4 class="text-secondary-1">CARE SYSTEM</h4>
+        <h6 class="text-secondary-1 fw-normal">
+          照護系統是一套以「人」為主軸的系統，期望隨著「人」的老化年齡及需求變化，在不同機構都可以了解被照護者的過去及現在狀況，評估未來可能發生風險，並可以讓後勤照護者及醫療團隊建立一套彼此溝通、紀錄照護／用藥的共通平台
+        </h6>
+      </div>
     </div>
     <div
-      class="d-flex flex-column flex-lg-row care-system__block bg-primary-5 w-100 justify-content-center align-items-lg-start align-items-center pt-15"
+      class="d-flex flex-column flex-md-row care-system__block bg-primary-5 w-100 justify-content-center align-items-md-start align-items-center pt-15"
     >
       <div
-        class="d-flex flex-column gap-2 care-system__block__sub-block-1 ms-lg-20 gap-2"
+        class="d-flex flex-column gap-2 care-system__block__sub-block-1 align-items-center ms-lg-20 gap-2 w-100"
       >
-        <h3 class="text-primary-2 mb-3">現行長照機構問題</h3>
-        <div class="mb-2">
+        <h3 class="text-primary-2 mb-5">現行長照機構問題</h3>
+        <div class="mb-2_5">
           <h5 class="text-secondary-1 fw-normal">
             長輩的日常紀錄與醫療相關紀錄無法串連
           </h5>
@@ -52,104 +55,53 @@
             醫療團隊無法從日常狀況了解長輩身體狀況
           </h5>
         </div>
-
-        <div class="d-flex flex-wrap justify-content-center w-100 gap-4">
-          <div
-            *ngFor="let question of this.questions_list"
-            class="d-flex flex-column care-system__block__question-block bg-white align-items-center justify-content-center text-primary-2"
-          >
-            <div [ngSwitch]="question.img">
-              <app-clinical-notes-solid-icon
-                class="icon__question"
-                *ngSwitchCase="'app-clinical-notes-solid-icon'"
-              ></app-clinical-notes-solid-icon>
-              <app-prescriptions-solid-icon
-                class="icon__question"
-                *ngSwitchCase="'app-prescriptions-solid-icon'"
-              >
-              </app-prescriptions-solid-icon>
-              <app-psychology-alt-solid-icon
-                class="icon__question"
-                *ngSwitchCase="'app-psychology-alt-solid-icon'"
-              >
-              </app-psychology-alt-solid-icon>
-              <app-blind-solid-icon
-                class="icon__question"
-                *ngSwitchCase="'app-blind-solid-icon'"
-              >
-              </app-blind-solid-icon>
-            </div>
-            <h4>{{ question.title }}</h4>
-          </div>
-        </div>
+        <div
+          class="care-system__block__question-block d-md-block d-none w-100"
+          [style.backgroundImage]="
+            'url(' + 'assets/product_pc/image_problem_pc.png' + ')'
+          "
+        ></div>
+        <div
+          class="care-system__block__question-block d-md-none d-sm-block d-none w-100"
+          [style.backgroundImage]="
+            'url(' + 'assets/product_pad/image_problem_pad.png ' + ')'
+          "
+        ></div>
+        <div
+          class="care-system__block__question-block d-block d-sm-none w-100"
+          [style.backgroundImage]="
+            'url(' + 'assets/product_mobile/image_problem_mobile.png ' + ')'
+          "
+        ></div>
       </div>
       <app-arrow-right-icon
-        class="d-none d-lg-block mx-6 align-self-center icon__arrow"
+        class="d-none d-md-flex align-self-center icon__arrow"
       ></app-arrow-right-icon>
       <app-arrow-drop-down-icon
-        class="d-lg-none d-block icon__arrow"
+        class="d-block d-md-none icon__arrow"
       ></app-arrow-drop-down-icon>
       <div
-        class="d-flex flex-column gap-2 care-system__block__sub-block-2 align-items-center me-0"
+        class="d-flex flex-column gap-2 care-system__block__sub-block-2 align-items-center me-0 w-100"
       >
-        <h3 class="text-primary-2">智慧醫療照護平台設計理念</h3>
-        <div class="d-flex flex-wrap mt-20 justify-content-between w-100">
-          <div
-            *ngFor="let setting of this.settings_list"
-            class="d-flex flex-column care-system__block__setting-block bg-primary-3 align-items-center justify-content-center text-white"
-          >
-            <div
-              class="care-system__circle-block care-system__block__setting-block__img-block bg-white d-flex justify-content-center align-items-center"
-            >
-              <div [ngSwitch]="setting.img">
-                <app-hub-solid-icon
-                  class="icon__setting"
-                  *ngSwitchCase="'app-hub-solid-icon'"
-                ></app-hub-solid-icon>
-                <app-light-mode-solid-icon
-                  class="icon__setting"
-                  *ngSwitchCase="'app-light-mode-solid-icon'"
-                >
-                </app-light-mode-solid-icon>
-                <app-family-home-solid-icon
-                  class="icon__setting"
-                  *ngSwitchCase="'app-family-home-solid-icon'"
-                >
-                </app-family-home-solid-icon>
-              </div>
-              <!-- <img
-                class="care-system__circle-block__img"
-                src="{{ setting.img }}"
-              /> -->
-            </div>
-            <div class="pt-4">
-              <h4>{{ setting.title1 }}</h4>
-              <h4>{{ setting.title2 }}</h4>
-            </div>
-          </div>
-        </div>
-        <div class="care-system__block__line-circle"></div>
+        <h3 class="text-primary-2 mb-5">智慧醫療照護平台設計理念</h3>
         <div
-          class="care-system__block__circle-word care-system__block__circle-word__circle-1 bg-white d-flex align-items-center justify-content-center"
-        >
-          <h4>認知強化</h4>
-        </div>
+          class="care-system__block__setting-block d-md-block d-none w-100"
+          [style.backgroundImage]="
+            'url(' + 'assets/product_pc/image_concept_pc.png' + ')'
+          "
+        ></div>
         <div
-          class="d-flex flex-column care-system__block__circle-word care-system__block__circle-word__circle-2 bg-white d-flex align-items-center justify-content-center"
-        >
-          <h4>身體機能</h4>
-          <h4>活化</h4>
-        </div>
+          class="care-system__block__setting-block d-md-none d-sm-block d-none w-100"
+          [style.backgroundImage]="
+            'url(' + 'assets/product_pad/image_concept_pad.png ' + ')'
+          "
+        ></div>
         <div
-          class="care-system__block__circle-word care-system__block__circle-word__circle-3 bg-white d-flex align-items-center justify-content-center"
-        >
-          <h4>促進健康</h4>
-        </div>
-        <div
-          class="care-system__block__circle-word care-system__block__circle-word__circle-4 bg-white d-flex align-items-center justify-content-center"
-        >
-          <h4>減緩老化</h4>
-        </div>
+          class="care-system__block__setting-block d-block d-sm-none w-100"
+          [style.backgroundImage]="
+            'url(' + 'assets/product_mobile/image_concept_mobile.png ' + ')'
+          "
+        ></div>
       </div>
     </div>
   </div>
@@ -158,7 +110,7 @@
   <div class="block__2 position-relative">
     <div
       #traningWords
-      class="w-100 animation-bg-trining_words d-md-block d-none"
+      class="w-100 animation-bg-trining_words d-sm-block d-none"
     ></div>
     <div class="block__afterImg">
       <app-after-img-word-block
@@ -169,7 +121,7 @@
 </section>
 <section class="mb-10 mb-md-20 d-flex justify-content-center w-100">
   <div
-    class="d-flex justify-content-center gap-5 py-16 flex-md-wrap flex-nowrap flex-column flex-md-row align-items-center care-system__traning-people-block w-100"
+    class="d-flex justify-content-center gap-5 py-md-16 pb-10 flex-sm-wrap flex-nowrap flex-column flex-sm-row align-items-center care-system__traning-people-block w-100"
   >
     <div
       *ngFor="let people of this.traning_people_list"
